--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pixelit-rewrite",
-  "version": "1.0.1",
+  "name": "pixelit",
+  "version": "2.2.4",
   "description": "The very first Blooket private server with pixel art blooks and badges!",
   "main": "server.js",
   "dependencies": {
@@ -10,6 +10,7 @@
     "connect-history-api-fallback": "^2.0.0",
     "crypto-js": "^4.2.0",
     "dompurify": "^3.1.6",
+    "dotenv": "^17.2.1",
     "express": "^4.19.2",
     "express-rate-limit": "^7.4.0",
     "express-session": "^1.18.2",
@@ -25,6 +26,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "IzumiiHD",
   "license": "ISC"
 }
